# eggs_betta

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.nginx.test  README.md  celerybeat-schedule  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/: asgi.py  celery.py  gunicorn_config.py  settings.py  settings_prod.py  urls.py
docker/nginx/: default_test.conf
docker/prod/: Dockerfile
docker/python/: Dockerfile
docker/workers_celery/: Dockerfile
front/: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
front/components/: CAContract.vue  CalcTable.vue  Card.vue  ModalForm.vue  Sidebar.vue  TableEggs.vue  addExpense.vue  docViewer.vue  documents.vue  expense.vue  factDealDates.vue  fullTable.vue  note.vue  uploadCAContract.vue
front/layouts/: default.vue  login.vue
front/middleware/: auth.js
front/pages/: AppFromBuyer.vue  AppFromSeller.vue  Calculate.vue  ConfirmedCalculate.vue  Deal.vue  apps.vue  buyers.vue  calculates.vue  chat.vue  confirmedCalculates.vue  deals.vue  documents.vue  index.vue  login.vue  logistic.vue  sellers.vue  statisticFromMessage.vue  statistics.vue  test.vue
front/store/: authorization.js  bid.js  ca.js  eggs.js  user.js
general_layout/serializers/: __init__.py  application.py  bases.py  (+2 more)
product_eggs/: admin.py  apps.py  receivers.py  tasks.py  urls.py
users/: admin.py  forms.py  models.py  routers.py  serializers.py  services.py  urls.py  views.py
websocket/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
(+276 files in other folders)
